src/pages/GetInvolved/GetInvolved.scss
@import '../../variables.scss';

.get-involved {
    
}

.opportunitiesSection {
    background-color: $Black;
    padding: 2rem;

    .largeItalicCenter {
        color: $White;
        text-align: center;
        font-size: 5rem;
        font-style: italic;
        font-family: $font-heading;
    }

    .disciplineList {
        margin-right: auto;
        margin-left: auto;
        display: block;
        text-align: center;
        width: 80%;

        .discipline {
            display: inline-block;
            border: 0.3rem solid $DarkWhite;
            box-shadow: 0.5rem 0.5rem $AccentPink;
            padding: .5rem;
            margin: 2rem 1rem;

            h1 {
                color: $DarkWhite;
                text-align: center;
                font-family: $font-heading;
            }
        }
    }
}

@media screen and (max-width: 768px) {
    .largeItalicCenter {
        font-size: 3rem !important;
    }

    .disciplineList {
        h1 {
            font-size: 1.5rem !important;
        }
    }

    .discipline {
        display: block !important;

        h1 {
            font-size: 1.25rem !important;
        }
    }
}

